--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -21,11 +21,11 @@ Hero 섹션
         <div class="row align-items-center">
             <div class="col-lg-6">
                 <h1 class="display-4 fw-bold mb-4">
-                    Django 블로그에 <br>오신 것을 환영합니다
+                    나만의 소중한 <br>기록 공간
                 </h1>
                 <p class="lead mb-4">
-                    기술, 프로그래밍, 개발 이야기를 공유하는 블로그입니다.
-                    다양한 글을 읽고 의견을 나눠보세요.
+                    일상의 생각과 소소한 이야기를 기록하는 블로그입니다.<br>
+                    천천히 둘러보며 이야기를 나누어보세요.
                 </p>
                 <div class="d-flex gap-3">
                     <a href="{% url 'blog:post_list' %}" class="btn btn-light btn-lg">
